# libsdb

./: .cvsignore  .gitignore  Doxyfile  LICENSE  Makefile  Makefile.in  README  README.md  base64.c  base64.h  configure  configure.ac  libsdb_config.h.in  main.c  private.c  response.c  response.h  sdb-config  sdb-config.in  sdb.c  sdb_private.h  stdafx.h  util.c  util.h
include/: .cvsignore  sdb.h
mk/: compile.mk  defs.mk  header.mk  lib-and-test.mk  library.mk  program.mk
